# django_ecommerce

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
ecommerce/account/: forms.py  urls.py  views.py
ecommerce/account/templates/account/: dashboard.html  delete-account.html  my-login.html  profile-management.html
ecommerce/account/templates/account/password/: password-reset-complete.html  password-reset-form.html  password-reset-sent.html  password-reset.html
ecommerce/account/templates/account/registration/: email-verification-failed.html  email-verification-sent.html  email-verification-success.html  email-verification.html  register.html
ecommerce/cart/: cart.py  views.py
ecommerce/cart/templates/cart/: cart-summary.html
ecommerce/ecommerce/: settings.py  urls.py
ecommerce/static/css/: styles.css
ecommerce/static/js/: app.js
ecommerce/store/: admin.py  context_processors.py  models.py  urls.py  views.py
ecommerce/store/migrations/: 0001_initial.py  0002_product_category.py
ecommerce/store/templates/store/: base.html  list-category.html  product-info.html  store.html
