[tool.poetry]
name = "django_full_course"
version = "0.1.0"
description = ""
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@eleks.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.5"
Pillow = "^9.4.0"
django-mathfilters = "^1.0.0"
django-crispy-forms = "^1.14.0"
django-utils-six = "^2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
